# mcp-finance-data

./: .gitignore  LICENSE  README.md  azure-container.yaml  azure.yaml  package.json  pyproject.toml  run-inspector.ps1  start-mcp-server.ps1
.github/: copilot-instructions.md
container-app/: pyproject.toml  requirements.txt  update-probes.yaml
docs/: AZURE_DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_UPDATES.md  foundry-instructions.md
infra/: main.bicep  main.parameters.json
infra/app/: api-premium.bicep  api.bicep
infra/container-app/: container-app.bicep  main.bicep
infra/mcp-server/: main.bicep  main.parameters.json  mcp-server.bicep
mcp-server/: .dockerignore  Dockerfile  server.py
scripts/: deploy-container-app.ps1  setup-auth.ps1
src/: function_app.py  host.json  requirements.txt
